--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,13 @@
 .git/
 .idea/
-incrowd/dev/
-incrowd/.tox/
-incrowd/libs/
-incrowd/.vagrant
-incrowd/fantasy
-incrowd/frontend/node_modules
-incrowd/frontend/bower_components
-incrowd/.google/
-incrowd/.web/
-incrowd/.idea/
+cliques/dev/
+cliques/.tox/
+cliques/libs/
+cliques/.vagrant
+cliques/fantasy
+cliques/frontend/node_modules
+cliques/frontend/bower_components
+cliques/.google/
+cliques/.web/
+cliques/.idea/
+cliques/staticfiles
