--- a/cliques/requirements.txt
+++ b/cliques/requirements.txt
@@ -19,6 +19,8 @@ pylint-django==0.5.5
 pylint-plugin-utils==0.2.2
 pylint==1.3.1
 requests==2.4.3
+sendgrid==0.5.1
+sendgrid-django==1.1.0
 six==1.8.0
 South==1.0.1
 sqlparse==0.1.13
