--- a/docker_configs/uwsgi.ini
+++ b/docker_configs/uwsgi.ini
@@ -23,7 +23,7 @@ http = :8000
 
 [base]
 # chdir to the folder of this config file, plus app/website
-chdir = %dapp/
+chdir = %d
 # load the module from wsgi.py, it is a python path from
 # the directory above.
 module=cliques.wsgi:application
