Cleaning up test env, adding initial code for Mailgun

--- a/cliques/Dockerfile
+++ b/cliques/Dockerfile
@@ -20,7 +20,7 @@ ENV INCROWD_PATH /home/docker/code
 ENV DJANGO_SETTINGS_MODULE cliques.settings
 ENV DEBIAN_FRONTEND noninteractive
 ENV INITRD No
-ENV SETTINGS_MODE prod
+ENV SETTINGS_MODE testing
 
 RUN apt-get update
 RUN apt-get install  -y --no-install-recommends software-properties-common
