--- a/cliques/tox.ini
+++ b/cliques/tox.ini
@@ -28,6 +28,11 @@ envdir = dev
 deps =
   -rrequirements.txt
 
+[testenv:docker_dev]
+envdir = docker_dev
+deps =
+  -rrequirements.txt
+
 [flake8]
 #302 is very common in Django
 ignore = E12,E711,H302
