Fixes for build process, building root container now works

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,17 @@
 .git/
 .idea/
-cliques/dev/
-cliques/.tox/
-cliques/libs/
-cliques/.vagrant
-cliques/fantasy
-cliques/frontend/node_modules
-cliques/frontend/bower_components
-cliques/.google/
-cliques/.web/
-cliques/.idea/
-cliques/staticfiles
+.vagrant
+incrowd/dev/
+incrowd/.tox/
+incrowd/libs/
+incrowd/fantasy
+incrowd/frontend/node_modules
+incrowd/frontend/bower_components
+incrowd/ansible/
+incrowd/google/
+incrowd/web/
+incrowd/staticfiles
+incrowd/debug.log
+incrowd/db.sqlite3
+incrowd/dev_data.json
+incrowd/app/
