Upgrading to Django 1.7, adding new relic support, improving dev environment

--- a/incrowd/.dockerignore
+++ b/incrowd/.dockerignore
@@ -1,13 +1,18 @@
 .git/
+.idea/
+.vagrant
 dev/
 .tox/
 libs/
-.vagrant
 fantasy
 frontend/node_modules
 frontend/bower_components
 ansible/
 google/
 web/
-.idea/
 staticfiles
+debug.log
+db.sqlite3
+dev_data.json
+app/
+config/
