--- a/incrowd/requirements.txt
+++ b/incrowd/requirements.txt
@@ -1,30 +1,25 @@
-appengine-toolkit==0.1.0
-astroid==1.2.1
-django-cors-headers==0.13
-django-debug-toolbar==1.2.2
-django-filter==0.8
-Django==1.5.7
+argparse==1.2.1
+astroid==1.3.2
+chardet==2.3.0
+colorama==0.3.2
+django-cors-headers==1.0.0
+django-filter==0.9.1
+django-mailgun==0.2.2
+Django==1.7.2
 djangorestframework==2.4.4
-flake8==2.2.5
-logilab-common==0.63.0
-mccabe==0.2.1
-mock==1.0.1
+gyp==0.1
+html5lib==1.0b3
+logilab-common==0.63.2
+mccabe==0.3
+meld3==0.6.10
 MySQL-python==1.2.5
-pep8==1.5.7
-pip-tools==0.3.5
+newrelic==2.40.0.34
 pusher==0.8
 py==1.4.26
-pyflakes==0.8.1
-pylint-django==0.5.5
-pylint-plugin-utils==0.2.2
-pylint==1.3.1
-requests==2.4.3
-sendgrid==0.5.1
-sendgrid-django==1.1.0
-six==1.8.0
-South==1.0.1
-sqlparse==0.1.13
-tox==1.8.1
-urllib3==1.9.1
-virtualenv==1.11.6
-django-mailgun
+requests==2.5.1
+six==1.9.0
+sqlparse==0.1.14
+supervisor==3.1.3
+urllib3==1.10
+uWSGI==2.0.9
+wsgiref==0.1.2
