--- a/docker_configs/uwsgi.ini
+++ b/docker_configs/uwsgi.ini
@@ -29,3 +29,11 @@ chdir = %d
 module=incrowd.wsgi:application
 # allow anyone to connect to the socket. This is very permissive
 chmod-socket=666
+
+# the below is required by new relic. be sure to monitor your system
+# memory since we're enabling threads
+# https://newrelic.com/docs/python/python-agent-and-uwsgi
+# http://uwsgi-docs.readthedocs.org/en/latest/Options.html
+enable-threads = true
+single-interpreter = true
+lazy-apps = true
