--- a/incrowd/frontend/bower.json
+++ b/incrowd/frontend/bower.json
@@ -32,7 +32,8 @@
     "pusher": "~2.2.3",
     "angular-material": "~0.7.0-rc1",
     "angular-off-click": "~0.0.2",
-    "angular-elastic": "~2.4.2"
+    "angular-elastic": "~2.4.2",
+    "angular-ui-router": "~0.2.13"
   },
   "description": "A small, private social network",
   "main": "js/app.js",
