--- a/incrowd/frontend/bower.json
+++ b/incrowd/frontend/bower.json
@@ -33,13 +33,15 @@
     "angular-material": "~0.7.0-rc1",
     "angular-off-click": "~0.0.2",
     "angular-elastic": "~2.4.2",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "favico.js": "~0.3.5"
   },
   "description": "A small, private social network",
   "main": "js/app.js",
   "private": true,
   "resolutions": {
     "angular-animate": "1.3.x",
-    "angular": "1.3.x"
+    "angular": "1.3.x",
+    "favico.js": "~0.3.5"
   }
 }
