--- a/incrowd/tox.ini
+++ b/incrowd/tox.ini
@@ -4,9 +4,9 @@ skipsdist = True
 whitelist_externals = ./bin/flake8
 
 [testenv]
-deps =
-    -rrequirements.txt
-
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/dev_requirements.txt
+       
 [testenv:pep8]
 commands =
   flake8 api
