--- a/incrowd/tox.ini
+++ b/incrowd/tox.ini
@@ -6,7 +6,7 @@ whitelist_externals = ./bin/flake8
 [testenv]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/dev_requirements.txt
-       
+
 [testenv:pep8]
 commands =
   flake8 api
@@ -25,13 +25,13 @@ commands =
 
 [testenv:dev]
 envdir = dev
-deps =
-  -rrequirements.txt
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/dev_requirements.txt
 
 [testenv:docker_dev]
 envdir = docker_dev
-deps =
-  -rrequirements.txt
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/dev_requirements.txt
 
 [flake8]
 #302 is very common in Django
