--- a/shippable.yml
+++ b/shippable.yml
@@ -3,15 +3,11 @@ language: python
 python:
   - 2.7
 
-build_image: shippableimages/ubuntu1404_python
+build_image: incrowd/incrowd-shippable
 
 env:
-  - ENV=travis
+  - ENV=shippable
 before_script:
-  - mysql -e 'create database incrowd;'
-install:
-  - apt-get -y -q update
-  - apt-get -y -q install libmysqlclient-dev libsqlite3-dev python-dev build-essential  mysql-client
-  - pip install -r incrowd/dev_requirements.txt --use-mirrors
+  - mysql  -h172.17.42.1 -ushippable -e 'create database if not exists incrowd;'
 script:
   - make test
