--- a/incrowd/requirements.txt
+++ b/incrowd/requirements.txt
@@ -4,6 +4,7 @@ django-filter==0.9.1
 django-mailgun==0.2.2
 Django==1.7.2
 djangorestframework==2.4.4
+djoser==0.2.0
 MySQL-python==1.2.5
 newrelic==2.40.0.34
 pusher==0.8
