--- a/incrowd/Makefile
+++ b/incrowd/Makefile
@@ -12,7 +12,7 @@ clean: clean_www clean_app clean_build
 
 test: pep8 test_django
 
-docker_test: docker_build docker_test
+docker_test: docker_build docker_run_test
 
 #########################
 # Dev tools
@@ -38,8 +38,8 @@ docker_build:
 docker_run:
 	docker run -i -v `pwd`:/home/docker/code  -p 8000:8000 -t incrowd /bin/bash
 
-docker_test:
-	docker run -i -v `pwd`/incrowd:/home/docker/code  -p 8000:8000 -t incrowd /bin/bash make test
+docker_run_test:
+	docker run -i -v `pwd`:/home/docker/code  -t incrowd /bin/bash -c "make -C /home/docker/code test"
 
 docker_server:
 	if [ -e config/newrelic.ini ]; then \
