Fix uwsgi to use ports instead of sockets

--- a/docker_configs/uwsgi.ini
+++ b/docker_configs/uwsgi.ini
@@ -3,8 +3,8 @@
 # load base config from below
 ini = :base
 
-# %d is the dir this configuration file is in
-socket = %dapp.sock
+# listen on 8000 by default so we can use multiple containers
+socket = :8000
 master = true
 processes = 4
 
@@ -16,7 +16,7 @@ socket = :8001
 
 [local]
 ini = :base
-http = :8000
+http = :8002
 # set the virtual env to use
 ;home=/Users/you/envs/env
 
