Comments, new posts, chat, notifications, material icons

--- a/incrowd/Makefile
+++ b/incrowd/Makefile
@@ -1,3 +1,7 @@
+###########################################################################
+# These should only be run inside a docker container
+###########################################################################
+
 all: clean install test www
 
 prod: clean test www_prod link_libs
@@ -64,26 +68,6 @@ pep8:
 test_django:
 	python manage.py test
 
-# Install tools if you don't wanna use Docker
-install_ubuntu:
-	sudo apt-get install python-dev git python-pip mysql-server mysql libmysqlclient-dev mysql-python
-	sudo pip install tox
-	sudo npm install -g grunt-cli bower
-	tox -e dev
-	DJANGO_SETTINGS_MODULE="incrowd.settings" dev/bin/python manage.py help
-	DJANGO_SETTINGS_MODULE="incrowd.settings" dev/bin/python manage.py syncdb --noinput
-	DJANGO_SETTINGS_MODULE="incrowd.settings" dev/bin/python manage.py migrate --noinput
-
-install_osx:
-	brew install git mysql tox
-	sudo easy_install pip
-	sudo npm install -g grunt-cli bower
-	mysql.server start
-	tox -e dev
-	DJANGO_SETTINGS_MODULE="incrowd.settings" dev/bin/python manage.py help
-	DJANGO_SETTINGS_MODULE="incrowd.settings" dev/bin/python manage.py syncdb --noinput
-	DJANGO_SETTINGS_MODULE="incrowd.settings" dev/bin/python manage.py migrate --noinput
-
 # Dump data that can be loaded
 dump_data:
 	python manage.py dumpdata  --natural \
@@ -98,61 +82,3 @@ dump_data:
 # Load dev data
 load_data:
 	python manage.py loaddata getting_started_data.json
-
-#########################
-# Build/deploy tools
-#########################
-
-build_frontend_prod:
-	grunt --gruntfile frontend/Gruntfile.js prod
-
-build_frontend:
-	grunt --gruntfile frontend/Gruntfile.js
-
-www_prod: build_frontend_prod
-	grunt --gruntfile frontend/Gruntfile.js www
-
-www: build_frontend
-	grunt --gruntfile frontend/Gruntfile.js www
-
-# Link libs for AppEngine
-link_libs:
-	mkdir -p libs
-	bash install_libs.sh
-
-sync_appengine:
-	SETTINGS_MODE=prod source prod_exports && dev/bin/python manage.py syncdb
-	SETTINGS_MODE=prod source prod_exports && dev/bin/python manage.py migrate
-
-deploy:
-	cd frontend/ && npm install
-	cd frontend/ && bower install
-	appcfg.py update .
-
-rollback:
-	appcfg.py rollback .
-
-clean_www:
-	rm -rf www/*
-
-clean_app:
-	rm -rf cordova/www/*
-
-clean_build:
-	rm -rf frontend/build/*
-
-
-#########################
-# CI/CD tools
-#########################
-
-install_ci:
-	npm install -g bower grunt grunt-cli
-
-
-#########################
-# Misc
-#########################
-
-whoopee:
-	echo "Sorry, I'm not in the mood"
