Converting new post, tabs, profile, signup to new frontend

--- a/docker_configs/uwsgi.ini
+++ b/docker_configs/uwsgi.ini
@@ -3,8 +3,8 @@
 # load base config from below
 ini = :base
 
-# listen on 8000 by default so we can use multiple containers
-socket = :8000
+# listen on 80 by default serving up the whole site
+http = :80
 master = true
 processes = 4
 
