Cleanup to prepare for 0.3.0
Lots of cleanup and improvements in the Dockerfile to make
releases easier to use.

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,9 @@ incrowd/libs/
 incrowd/fantasy
 incrowd/frontend/node_modules
 incrowd/frontend/bower_components
+incrowd/frontend/src/lib/
+incrowd/frontend/dist/
+incrowd/frontend/.tmp/
 incrowd/ansible/
 incrowd/google/
 incrowd/web/
