--- a/docker_configs/uwsgi.ini
+++ b/docker_configs/uwsgi.ini
@@ -7,19 +7,9 @@ ini = :base
 http = :80
 master = true
 processes = 4
-
-[dev]
-ini = :base
-# socket (uwsgi) is not the same as http, nor http-socket
-socket = :8001
-
-
-[local]
-ini = :base
-http = :8002
-# set the virtual env to use
-;home=/Users/you/envs/env
-
+check-static = /home/docker/code/frontend/dist/
+check-static = /home/docker/code/staticfiles/
+static-index = index.html
 
 [base]
 # chdir to the folder of this config file, plus app/website
@@ -37,3 +27,4 @@ chmod-socket=666
 enable-threads = true
 single-interpreter = true
 lazy-apps = true
+
