--- a/incrowd/frontend/bower.json
+++ b/incrowd/frontend/bower.json
@@ -41,8 +41,9 @@
   "main": "js/app.js",
   "private": true,
   "resolutions": {
-    "angular-animate": "1.3.x",
+    "angular-animate": "^1.3.0 || >1.4.0-beta.0",
     "angular": "1.3.x",
-    "favico.js": "~0.3.5"
+    "favico.js": "~0.3.5",
+    "angular-sanitize": "1.3.x"
   }
 }
