--- a/incrowd/requirements.txt
+++ b/incrowd/requirements.txt
@@ -1,18 +1,18 @@
-argparse==1.2.1
-django-cors-headers==1.0.0
-django-filter==0.9.2
+django-cors-headers==1.1.0
+django-filter==0.10.0
 django-mailgun==0.2.2
-django-nose==1.4
-Django==1.8.0
+django-nose==1.4.1
+Django==1.8.3
 djangorestframework==3.1
 #django-push-notifications==1.2.1
 #-e git://github.com/jleclanche/django-push-notifications@7e5b806a1d65706e7f554456b3907a3ff980fb39#egg=django-push-notifications
-djoser==0.2.0
-MySQL-python==1.2.5
-newrelic==2.40.0.34
-pusher==0.8
-requests==2.5.1
+djoser==0.3.1
+#MySQL-python==1.2.5
+PyMySQL==0.6.6
+newrelic==2.54.0.41
+pusher==1.2.3
+requests==2.7.0 
 six==1.9.0
-urllib3==1.10
-uWSGI==2.0.9
+urllib3==1.11
+#uWSGI==2.0.9
 wsgiref==0.1.2
