--- a/incrowd/requirements.txt
+++ b/incrowd/requirements.txt
@@ -7,11 +7,10 @@ djangorestframework==3.1
 #django-push-notifications==1.2.1
 #-e git://github.com/jleclanche/django-push-notifications@7e5b806a1d65706e7f554456b3907a3ff980fb39#egg=django-push-notifications
 djoser==0.3.1
-#MySQL-python==1.2.5
-PyMySQL==0.6.6
+MySQL-python==1.2.5
 newrelic==2.54.0.41
 pusher==1.2.3
-requests==2.7.0 
+requests==2.7.0
 six==1.9.0
 urllib3==1.11
 #uWSGI==2.0.9
