Improving profile directive, using crowd config
Switched to the 'profile' directive for rendering, ensured saving a
profile updates, and makes updating the password via the API an
optional field. Use the crowd.name attribute for the site title.

--- a/incrowd/frontend/package.json
+++ b/incrowd/frontend/package.json
@@ -48,6 +48,7 @@
     "http-proxy": "^1.9.0",
     "jade": "^1.9.2",
     "jshint-stylish": "*",
+    "json3": "*",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
     "main-bower-files": "^2.6.2",
