Add fix for webkit bug #138038
Angularjs is broken on webkit, especially iOS8. This changes the way
properties are assigned in angular.js to avoid the 'TypeError:
Attempted to assign to readonly property' bug.

Also ignore changes to config.json (helps with mobile testing)

--- a/incrowd/frontend/.gitignore
+++ b/incrowd/frontend/.gitignore
@@ -5,3 +5,6 @@ build/
 src/lib/
 .awspublish*
 dist/
+# Ignore local changes, use git add -f if changing the config files
+src/app/js/config.json
+src/app/js/config.js
