--- a/incrowd/frontend/package.json
+++ b/incrowd/frontend/package.json
@@ -55,6 +55,7 @@
     "protractor": "^2.0.0",
     "require-dir": "^0.3.0",
     "uglify-save-license": "*",
+    "webkit-assign": "^1.3.0",
     "wiredep": "*"
   },
   "engines": {
