--- a/incrowd/tox.ini
+++ b/incrowd/tox.ini
@@ -12,7 +12,7 @@ commands =
   flake8 api
   flake8 chat_server
   flake8 incrowd
-  flake8 fantasy_football
+  flake8 plugins/fantasy
   flake8 invite_only
   flake8 notify
   flake8 poll
