Moving tox.ini up for Circle

--- a/tox.ini
+++ b/tox.ini
@@ -4,20 +4,22 @@ skipsdist = True
 whitelist_externals = ./bin/flake8
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/dev_requirements.txt
+deps = -r{toxinidir}/incrowd/requirements.txt
+       -r{toxinidir}/incrowd/dev_requirements.txt
+changedir = {toxinidir}/incrowd
 
 [testenv:pep8]
 commands =
-  flake8 api
-  flake8 chat_server
-  flake8 incrowd
-  flake8 fantasy_football
-  flake8 invite_only
-  flake8 notify
-  flake8 poll
-  flake8 push
-  flake8 website
+  flake8 incrowd/api
+  flake8 incrowd/chat_server
+  flake8 incrowd/incrowd
+  flake8 incrowd/fantasy_football
+  flake8 incrowd/invite_only
+  flake8 incrowd/notify
+  flake8 incrowd/poll
+  flake8 incrowd/push
+  flake8 incrowd/website
+changedir = {toxinidir}
 
 [testenv:django]
 commands =
